force-app/main/default/objects/Student__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <length>245</length>
    <type>Text</type>
</CustomField>