force-app/main/default/objects/Student__c/fields/NumberOfActiveStudent__c.field-meta.xml
<CustomField>
    <fullName>NumberOfActiveStudent__c</fullName>
    <label>NumberOfActiveStudent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>