force-app/main/default/objects/Student__c/fields/Student_details__c.field-meta.xml
<CustomField>
    <fullName>Student_details__c</fullName>
    <formula>First_Name__c  &amp;  Last_Name__c &amp;  Email__c   &amp;  TEXT( Date_of_Birth__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student details</label>
    <type>Text</type>
</CustomField>